Updated to Java 21
Updated Project to Java 21
-Refactored to new classes compatible with Java21
-Replaced URL with URI
-Replaced instance of RemoteWebDriver to a new instance.